--- a/pvp/Seasons.json
+++ b/pvp/Seasons.json
@@ -1,11 +1,22 @@
 {
 	"Name": "Seasons",
-	"ActiveSeasons": [ "global" ],
-	"Seasons": {
-		"global": {
-			"MatchCosts": [],
-			"MatchRewards": [],
-			"LeaderboardRewards": []
+	"ActiveSeasons":
+	[
+		"global"
+	],
+	"Seasons":
+	{
+		"global":
+		{
+			"MatchCosts":
+			[
+			],
+			"MatchRewards":
+			[
+			],
+			"LeaderboardRewards":
+			[
+			]
 		}
 	}
 }
