--- a/Config/pvp/Seasons.json
+++ b/Config/pvp/Seasons.json
@@ -1,22 +1,13 @@
 {
-	"Name": "Seasons",
-	"ActiveSeasons":
-	[
-		"global"
-	],
-	"Seasons":
-	{
-		"global":
-		{
-			"MatchCosts":
-			[
-			],
-			"MatchRewards":
-			[
-			],
-			"LeaderboardRewards":
-			[
-			]
-		}
-	}
+  "Name": "Seasons",
+  "ActiveSeasons": [
+    "global"
+  ],
+  "Seasons": {
+    "global": {
+      "MatchCosts": [],
+      "MatchRewards": [],
+      "LeaderboardRewards": []
+    }
+  }
 }
