--- a/JsonBeautifier/JsonBeautifier/JsonBeautifier.csproj
+++ b/JsonBeautifier/JsonBeautifier/JsonBeautifier.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Insight.Database" Version="6.2.5" />
+    <PackageReference Include="Insight.Database.Core" Version="6.2.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
